  resulted in an "unknown function" message. We now convert this call into
  ``coalesce(long, long)``. The conversion is possible through a type precedence
  list and convertibility checks on the data types.

- Added cluster checks that warn if some tables need to be recreated so that
  they are compatible with future versions of CrateDB >= 3.0.0.

- Functions which accept regular expression flags now throw an error when
  invalid flags are provided.

Fixes
=====

 - Upgraded Elasticsearch to v5.6.3

 - Fixed an issue that caused ``INSERT`` statements using a subquery on the
   `sys.shards` system table to fail.

 - Upgraded Elasticsearch to v5.6.2

 - Update position of the navigation menu elements of the Admin UI.

 - Fixed left Join condition in shards query that previously caused
   duplicated shards to be displayed in the shards visualisation
   of the Admin UI.

 - Added loading indicator in shards view in the Admin UI.

 - Do not automatically execute the query when clicking on
   the "Query Table" button in the table view of the Admin UI.

 - Fixed race condition in COPY FROM that could display incorrect row count
   when inserting into table partition that does not exist upfront.

 - Fixed a bug that caused incorrect results to be returned for JOIN queries
   when the table stats indicated that the left table of a join is smaller
   than the right.

 - Fixed passing arguments that contain spaces in crate shell script.

 - Fixed an issue that caused a table that is not part of the "doc" schema to
   be unavailable/hidden if it gets closed using ``ALTER TABLE``.

 - Fixed an issue where the query circuit breaker would be tripped after
   running several queries due to incorrect memory tracking. Subsequent
   operations would've failed due to the lack of circuit breaker cleanup.

 - Improve shards view performance in the Admin UI

 - Remove horizontal scroll from the console editor in the Admin UI.